# fonttools

./: .appveyor.yml  .codecov.yml  .coveragerc  .git-blame-ignore-revs  .gitattributes  .gitignore  .pre-commit-config.yaml  .pyup.yml  .readthedocs.yml  .travis.yml  CHANGELOG.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LEGAL.txt  LICENSE  LICENSE.external  LICENSE.txt  MANIFEST  MANIFEST.in  Makefile  NEWS  NEWS.rst  README.md  README.rst  README.txt  SECURITY.md  TTX.py  TTX.rsrc  Update .travis.yml  appveyor.yml  benchmark_abi3.py  benchmark_fontmake.py  build_backend.py  closure-glyph.c  closure-gsub-text.py  closure-unicode.c  compare_abi3_results.py  dev-requirements.txt  extra_requirements.txt  fd2ft.py  (+27 more)
.appveyor/: with-compiler.cmd
.github/workflows/: codeql.yml  publish.yml  test.yml  wheels.yml
.travis/: after_success.sh  before_deploy.sh  before_install.sh  install.sh  run.sh
Data/: frequency.txt
Doc/: ChangeLog.txt  Makefile  README.md  bugs.txt  changes.txt  docs-requirements.txt  documentation.html  index.html  install.txt  make.bat  ttx.1
Doc/report/: averageStats  generalStats  report.tex
Doc/source/: afmLib.rst  agl.rst  cffLib.rst  conf.py  config.rst  developer.rst  encodings.rst  feaLib.rst  index.rst  inspect.rst  merge.rst  mtiLib.rst  optional.rst  subset.rst  t1Lib.rst  tfmLib.rst  ttx.rst  unicode.rst  voltLib.rst  volto.rst
Documentation/: Makefile  ToDo.txt  conf.py  index.rst  makeDocumentation.py  typotechnica.txt
Documentation/CVS/: Entries  Repository
Documentation/TypoTechnica 2005/: scripts.sit
Documentation/fontToolsDocs/: fontTools.afmLib.html  fontTools.agl.html  fontTools.agl_old.html  fontTools.cffLib.html  fontTools.encodings.MacRoman.html  fontTools.encodings.StandardEncoding.html  fontTools.encodings.html  fontTools.fondLib.html  fontTools.html  fontTools.misc.arrayTools.html  fontTools.misc.bezierTools.html  fontTools.misc.eexec.html  fontTools.misc.html  fontTools.misc.psCharStrings.html  fontTools.misc.psLib.html  fontTools.misc.psOperators.html  fontTools.misc.textTools.html  fontTools.misc.transform.html  fontTools.nfntLib.html  fontTools.pens.basePen.html  fontTools.pens.boundsPen.html  fontTools.pens.cocoaPen.html  fontTools.pens.html  fontTools.pens.pointInsidePen.html  fontTools.pens.reportLabPen.html  fontTools.pens.transformPen.html  fontTools.t1Lib.html  fontTools.ttLib.html  fontTools.ttLib.macUtils.html  fontTools.ttLib.sfnt.html  fontTools.ttLib.standardGlyphOrder.html  fontTools.ttLib.tables.B_A_S_E_.html  fontTools.ttLib.tables.C_F_F_.html  fontTools.ttLib.tables.D_S_I_G_.html  fontTools.ttLib.tables.DefaultTable.html  fontTools.ttLib.tables.G_D_E_F_.html  fontTools.ttLib.tables.G_P_O_S_.html  fontTools.ttLib.tables.G_S_U_B_.html  fontTools.ttLib.tables.J_S_T_F_.html  fontTools.ttLib.tables.L_T_S_H_.html  (+43 more)
Documentation/interface/: all.rst
Documentation/objects/: RFont.rst  RGlyph.rst  objectsBase.rst  objectsRF.rst
Documentation/objectsRF/: RFont.rst  RGlyph.rst
Documentation/pens/: adapterPens.rst  digestPen.rst  filterPen.rst  mathPens.rst  rfUFOPen.rst
Documentation/robofabDocs/: dialogKit._dkVanilla.html  dialogKit.test.html  fontlabTesting.html  fontlabTesting.makeTest.html  fontlabTesting.testSupport.html  robofab.features.featureTools.html  (+68 more)
Lib/: convert_curves.py  cu2qu.py  interfaceChecker.py  sstruct.py  xmlWriter.py
Mac/: README.txt  TTX.py  TTX.rsrc.hqx  TTXMain.py
MetaTools/: buildChangeLog.py  buildTableList.py  buildUCD.py  build_otData.py  check_table_coverage.py  doco.diff  makeTarball.py  roundTrip.py
Scripts/: ReadMe.txt
Snippets/: README  README.md  alter-sidebearings.py  apply-feature-file.py  checksum.py  clean-nametable.py  cmap-format.py  codepoint_convert.py  compact_gpos.py  contrast.py  decompose-ttf.py  dump_woff_metadata.py  edit_raw_table_data.py  fix-dflt-langsys.py  fixfont.py  ft2fea.py  ft2feaCLI.py  gbk.py  interpolatable.py  interpolate.py  layout-features.py  list-chars-in-font.py  merge_variable_colrv1.py  merge_woff_metadata.py  momentX4.py  momentsPen.py  myfonttools.py  name-viewer.ipynb  otf2ttf.py  post-format.py  print-json.py  remove-overlaps.py  rename-fonts.py  renaming-glyphs.py  roboto_name_fix.py  scale-font.py  scale-upem.py  statShape.py  subset-fpgm.py  svg2glif.py  (+4 more)
TestData/: FreeMono-bad-interpretation.ttx  FreeMono-call-endf.ttx  FreeMono-call-endf.ttx.coi  FreeMono-empty-fdef-state.output  FreeMono-empty-fdef.ttx  FreeMono-empty-fdef.ttx.coi  FreeMono-fn-with-jmprs-from-arial-prefix.ttx  FreeMono-fn-with-jmprs-from-arial.ttx  FreeMono-fn-with-jmprs-from-arial.ttx.coi  FreeMono-gfv.ttx  FreeMono-gfv.ttx.coi  FreeMono-if-mismatch.ttx  FreeMono-inf-loop.ttx  FreeMono-inf-loop.ttx.coi  FreeMono-jmpr.ttx  FreeMono-jmpr.ttx.coi  FreeMono-jrot-jrof.ttx  FreeMono-jrot-jrof.ttx.coi  FreeMono-jrot.ttx  FreeMono-jrot.ttx.coi  FreeMono-max-no-simplify.ttx  FreeMono-max-no-simplify.ttx.coi  FreeMono-max.ttx  FreeMono-max.ttx.coi  FreeMono-multi-if.ttx  FreeMono-pop.ttx  FreeMono-pop.ttx.coi  FreeMono-simple-if.ttx  FreeMono-simple-loop-split-combined-push.ttx  FreeMono-simple-loop.ttx  FreeMono-simple-loop.ttx.coi  FreeMono-subset-A-state-csv.output  FreeMono-subset-A.ttx  FreeMono-subset-A.ttx.coi  TestFont1.vfb
Tests/: agl_test.py  config_test.py  conftest.py  merge_test.py  unicodedata_test.py
Tools/: fontTools  pyftanalysis  pyftcoi2ttf  pyftcompare  pyftcount  pyftfontview  pyftinspect  pyftmerge  pyftroundtrip  pyftsubset  pyfttreeshake  runFontTests  runRoundtripTests  runStats  runTests  runTtxToCoiTests  ttcompile  ttdump  ttlist  ttroundtrip  ttx
Windows/: README.TXT  fonttools-win-setup.iss  fonttools-win-setup.txt  mcmillan.bat
robofab/: install.py
tests/: __init__.py  cli_test.py  cu2qu_test.py  pens_test.py  testSupport.py  test_GLIF1.py  test_GLIF2.py  test_UFO1.py  test_UFO2.py  test_UFO3.py  test_UFOConversion.py  test_filenames.py  test_glifLib.py  test_plistlib.py  ufo_test.py  utils.py
tools/: benchmark.py  ufo_benchmark.py  update_cython_shadow.py
ufoLib2/: .gitignore  README.md  pyproject.toml  setup.cfg  tox.ini
(+3251 files in other folders)
