[bdist_wheel]
universal = 1

[sdist]
formats = zip

[aliases]
test = pytest

[metadata]
license_file = LICENSE

[tool:pytest]
minversion = 3.0
testpaths =
	tests
python_files =
	*_test.py
python_classes =
	*Test
addopts =
	-s
	-v
	-r a
	--doctest-modules
	--doctest-ignore-import-errors
filterwarnings:
	ignore:.*bytes:DeprecationWarning:fs.base
