[bumpversion]
current_version = 4.27.2.dev0
commit = True
tag = False
tag_name = {new_version}
parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)(\.(?P<release>[a-z]+)(?P<dev>\d+))?
serialize = 
	{major}.{minor}.{patch}.{release}{dev}
	{major}.{minor}.{patch}

[bumpversion:part:release]
optional_value = final
values = 
	dev
	final

[bumpversion:part:dev]

[bumpversion:file:Lib/fontTools/__init__.py]
search = __version__ = "{current_version}"
replace = __version__ = "{new_version}"

[bumpversion:file:setup.py]
search = version="{current_version}"
replace = version="{new_version}"

[sdist]
formats = zip

[metadata]
license_file = LICENSE

[tool:pytest]
minversion = 3.0
testpaths = 
	Tests
	fontTools
python_files = 
	*_test.py
python_classes = 
	*Test
addopts = 
	-r a
	--doctest-modules
	--doctest-ignore-import-errors
	--pyargs
doctest_optionflags = 
	ALLOW_UNICODE
	ELLIPSIS
filterwarnings = 
	ignore:readPlist:DeprecationWarning:plistlib_test
	ignore:writePlist:DeprecationWarning:plistlib_test
	ignore:some_function:DeprecationWarning:fontTools.ufoLib.utils
	ignore::DeprecationWarning:fontTools.varLib.designspace

[flake8]
max-line-length = 88
exclude =
	__pycache__,
	.*cache,
	.eggs,
	.git,
	.tox,
	.venv*,
	*.egg-info,
	*.pyc,
	build,
	dist,
	Doc/source/conf.py,
	Snippets/fontTools,
	venv*,
# https://flake8.pycqa.org/en/latest/user/error-codes.html
select = F403, F406, F821, F823
