[bumpversion]
current_version = 4.46.0
commit = True
tag = False
tag_name = {new_version}
parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)(\.(?P<release>[a-z]+)(?P<dev>\d+))?
serialize = 
	{major}.{minor}.{patch}.{release}{dev}
	{major}.{minor}.{patch}

[bumpversion:part:release]
optional_value = final
values = 
	dev
	final

[bumpversion:part:dev]

[bumpversion:file:Lib/fontTools/__init__.py]
search = __version__ = "{current_version}"
replace = __version__ = "{new_version}"

[bumpversion:file:setup.py]
search = version="{current_version}"
replace = version="{new_version}"

[metadata]
license_files = LICENSE

[tool:pytest]
minversion = 7.0.0
testpaths = 
	Tests
	fontTools
python_files = 
	*_test.py
python_classes = 
	*Test
addopts = 
	-r a
	--doctest-modules
	--doctest-ignore-import-errors
	--pyargs
doctest_optionflags = 
	ALLOW_UNICODE
	ELLIPSIS
filterwarnings = 
	ignore:readPlist:DeprecationWarning:plistlib_test
	ignore:writePlist:DeprecationWarning:plistlib_test
	ignore:some_function:DeprecationWarning:fontTools.ufoLib.utils
	ignore::DeprecationWarning:fontTools.varLib.designspace
markers = 
	slow: marks tests as slow (deselect with '-m "not slow"')

[tool:interrogate]
ignore-semiprivate = true
ignore-private = true
ignore-nested-functions = true
ignore-regex = ^(from|to)XML$,^(de)?compile$
ignore-module = true
